name:                awe
version:             0.1
synopsis:            Agda Web Editor backend
license:             AGPL
author:              Dan Rosén
maintainer:          danr@chalmers.se
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable awe
  main-is:           Main.hs
  ghc-options:       -threaded -Wall
  build-depends:
        base       >= 4.5
      , Agda       == 2.3.2.2
      , aeson      >= 0.6.2.0 && < 0.6.3
      , websockets >= 0.7.3 && < 0.8
      , directory
      , pretty
      , mtl
      , containers
      , text
      , stm
      , template-haskell
