name:                awe
version:             0.1
synopsis:            Agda Web Editor backend
license:             AGPL
author:              Dan Rosén
maintainer:          danr@chalmers.se
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable awe
  main-is:           Main.hs
  ghc-options:       -threaded -Wall
  build-depends:
        base       >= 4.5
      , Agda       == 2.4.0
      , aeson      >= 0.7.0.0
      , websockets >= 0.8.2
      , directory
      , pretty
      , mtl
      , containers
      , text
      , stm
      , template-haskell
